--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 body {
   overflow-x: hidden !important;
   color: #4b4453;
-  font-family: var(--font);
+  font-family: var(--font) !important;
 }
 
 body,
@@ -121,7 +121,6 @@ code {
 
 .wallet-button {
   color: #2c2560 !important;
-  font-family: 'Roboto', sans-serif !important;
   font-size: 1.1rem !important;
   text-align: left !important;
   justify-content: flex-start !important;
@@ -138,4 +137,8 @@ code {
 
 .Mui-disabled {
   background-color: #cdcdcd !important;
+}
+
+.MuiTypography-root {
+  font-family: var(--font) !important;
 }
